--- a/src/component/Calender/style.css
+++ b/src/component/Calender/style.css
@@ -29,8 +29,7 @@
   display: -ms-flexbox;
   display: flex;
   overflow-x: scroll;
-  max-width: 1050px;
-  padding: 75px 30px;
+  padding: 30px;
   width: 90vw;
   gap: 15px;
   position: relative;
@@ -105,6 +104,7 @@
 .calender__edit .button {
   margin: 5px;
   font-size: 10px;
+  background: #fafafa;
 }
 
 .calender__edit .button--edit {
@@ -113,10 +113,6 @@
   margin: 0px;
   right: 0px;
   padding: 2px 5px;
-}
-
-.calender__edit .button--delete {
-  background: none;
 }
 
 .calender__modal {
@@ -129,5 +125,35 @@
   -webkit-box-shadow: 1px 1px 10px -6px #000000;
           box-shadow: 1px 1px 10px -6px #000000;
   border-radius: 15px;
+}
+
+.calender__new-event {
+  position: relative;
+}
+
+.calender__event-form {
+  -webkit-box-shadow: 1px 1px 10px -6px #000000;
+          box-shadow: 1px 1px 10px -6px #000000;
+  padding: 25px 20px;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 15px;
+  top: 110%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+  z-index: 11;
+}
+
+.calender__event-form input {
+  border: none;
+  border-bottom: 1px solid #000;
 }
 /*# sourceMappingURL=style.css.map */
