--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -46,6 +46,17 @@
         flex-direction: column
         margin-top: 15px
         position: relative
+        &--user-event
+        &--task-event
+            &::before
+                content: "TASK DUE DATE"
+                font-size: 9px
+                text-align: left
+        &--reminder-event
+            &::before
+                content: "REMINDER EVENT"
+                font-size: 9px
+                text-align: left
         textarea
             border: none
             font-weight: 700
