--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -22,6 +22,7 @@
         gap: 15px
         position: relative
     &__day
+        min-width: 200px
         &--today
             .calender__inner-container
                 border-top: 5px solid #000
@@ -49,7 +50,7 @@
         &--user-event
         &--task-event
             &::before
-                content: "TASK DUE DATE"
+                content: "TASK EVENT"
                 font-size: 9px
                 text-align: left
         &--reminder-event
