--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -57,6 +57,8 @@
             font-weight: 700
             margin-right: 5px
         &--user-event
+            .calender__edit
+                display: flex
         &--task-event
             &::before
                 content: "TASK EVENT"
@@ -71,12 +73,13 @@
             font-size: 12px
             background: none
             height: 20px
+            width: 100%
         input
             border: none
             font-size: 10px
             background: none
     &__edit
-        display: flex
+        display: none
         justify-content: flex-start
         margin-bottom: 10px
         .button
