--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -47,11 +47,15 @@
         flex-wrap: wrap
         margin-top: 15px
         position: relative
+        background: #fff
+        padding: 5px 5px
+        border-radius: 15px
+        box-shadow: 0px 0px 6px -4px #000000
         &::before
             font-size: 9px
             text-align: left
             color: #fff
-            padding: 2px 5px
+            padding: 2px 10px
             border-radius: 15px
             width: fit-content
             font-weight: 700
@@ -74,6 +78,7 @@
             background: none
             height: 20px
             width: 100%
+            margin-top: 5px
         input
             border: none
             font-size: 10px
@@ -88,10 +93,12 @@
             background: #fafafa
             &--edit
                 position: absolute
-                top: -10px
+                top: 3px
                 margin: 0px
-                right: 0px
+                right: 5px
                 padding: 2px 5px
+                background: #fff
+                border: none
     &__modal
         padding: 5px 10px
         z-index: 10
