--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -1,28 +1,21 @@
 .calender
     position: relative
-    &::before, &::after
-        content: ""
-        position: absolute
-        top: 0
-        width: 50px
-        height: 100%
-        z-index: 10
-        background: rgb(255,255,255)
-    &::before
-        left: 0
-        background: linear-gradient(90deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%)
-    &::after
-        right: 0
-        background: linear-gradient(270deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%)
     &__wrapper
         display: flex
-        overflow-x: scroll
+        flex-direction: column
+        justify-content: center
         padding: 30px
-        width: 90vw
         gap: 15px
         position: relative
+        overflow-x: scroll
+        max-width: 90vw
+    &__week
+        display: flex
+        justify-content: flex-start
     &__day
+        width: 100%
         min-width: 200px
+        margin: 0 5px
         &--today
             .calender__inner-container
                 border-top: 5px solid #000
@@ -40,6 +33,8 @@
         background: #fafafa
         border-top: 4px solid #00000031
         padding: 20px 10px
+        min-height: 250px
+        height: calc(100% - 50px);
     &__title
         text-align: left
     &__event
