--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -66,6 +66,9 @@
             &::before
                 content: "REMINDER EVENT"
                 background: #ff0000c9
+        &--false
+            box-shadow: none
+            opacity: .4
         textarea
             border: none
             font-weight: 700
