--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -81,6 +81,11 @@
             border: none
             font-size: 10px
             background: none
+        .task-link
+            font-size: 10px
+            color: #000
+            margin-left: auto
+            padding: 0 5px
     &__edit
         display: none
         justify-content: flex-start
