--- a/src/component/Navbar/style.css
+++ b/src/component/Navbar/style.css
@@ -26,6 +26,23 @@
   margin: 10px;
 }
 
+.navbar__profile {
+  position: fixed;
+  top: 25px;
+  right: 25px;
+  color: #000;
+  background: #fff;
+  border: 2px solid #000;
+  padding: 5px 10px;
+  border-radius: 25px;
+  z-index: 999;
+}
+
+.navbar__profile:hover {
+  background: #000;
+  color: #fff;
+}
+
 .navbar__link {
   color: #000;
   padding: 10px 15px;
