--- a/src/component/Navbar/style.sass
+++ b/src/component/Navbar/style.sass
@@ -12,6 +12,19 @@
         justify-content: center
         align-items: center
         margin: 10px
+    &__profile
+        position: fixed
+        top: 25px
+        right: 25px
+        color: #000
+        background: #fff
+        border: 2px solid #000
+        padding: 5px 10px
+        border-radius: 25px
+        z-index: 999
+        &:hover
+            background: #000
+            color: #fff
     &__link
         color: #000
         padding: 10px 15px
