--- a/src/index.css
+++ b/src/index.css
@@ -182,3 +182,32 @@ input:checked + .slider:before {
   transform: translateX(26px);
   background-color: #fff;
 }
+.overview__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.overview__heading {
+  background-color: #fafafa;
+  padding: 10px 15px;
+  margin: 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.overview .overview__wrapper .overview__section {
+  text-align: left;
+  width: calc(50% - 20px);
+  background-color: #fafafa;
+  margin: 10px;
+  padding: 10px 15px;
+}
+.overview .overview__wrapper .overview__section.overview__section--full-width {
+  width: 100%;
+}
+
+.overview .overview__wrapper .overview__section p {
+  margin: 5px 0;
+}
