--- a/src/index.css
+++ b/src/index.css
@@ -204,10 +204,26 @@ input:checked + .slider:before {
   margin: 10px;
   padding: 10px 15px;
 }
-.overview .overview__wrapper .overview__section.overview__section--full-width {
+.overview .overview__wrapper .overview__section:last-child {
   width: 100%;
 }
 
 .overview .overview__wrapper .overview__section p {
   margin: 5px 0;
+}
+.overview .overview__item {
+  display: flex;
+}
+.overview .overview__item h4 {
+  font-weight: 500;
+}
+
+.overview .overview__item h4 span {
+  color: #fff;
+  background: #213547;
+  padding: 2px 10px;
+  border-radius: 25px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: .5px;
 }
