--- a/src/component/Navbar/style.css
+++ b/src/component/Navbar/style.css
@@ -36,11 +36,33 @@
   padding: 5px 10px;
   border-radius: 25px;
   z-index: 999;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
 }
 
 .navbar__profile:hover {
   background: #000;
   color: #fff;
+}
+
+.navbar__profile:hover::before {
+  width: 120px;
+  color: #000;
+}
+
+.navbar__profile::before {
+  content: "PROFILE\00a0SETTINGS";
+  position: absolute;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  -webkit-transition-delay: .2s;
+          transition-delay: .2s;
+  right: 40px;
+  font-size: 12px;
+  color: #fff;
+  width: 0px;
+  z-index: 998;
+  overflow: hidden;
 }
 
 .navbar__link {
