--- a/src/component/Navbar/style.sass
+++ b/src/component/Navbar/style.sass
@@ -22,9 +22,25 @@
         padding: 5px 10px
         border-radius: 25px
         z-index: 999
+        transition: .3s ease-in-out
         &:hover
             background: #000
             color: #fff
+            &::before
+                width: 120px
+                color: #000
+        &::before
+            content: "PROFILE\00a0SETTINGS"
+            position: absolute
+            transition: .3s ease-in-out
+            transition-delay: .2s
+            right: 40px
+            font-size: 12px
+            color: #fff
+            width: 0px
+            z-index: 998
+            overflow: hidden
+
     &__link
         color: #000
         padding: 10px 15px
