--- a/src/component/ReminderNotification/style.sass
+++ b/src/component/ReminderNotification/style.sass
@@ -1,23 +1,34 @@
-.notification
-    background: #fafafa
-    position: fixed
-    top: -500px
-    left: 0
-    width: 100vw
-    padding: 25px 0 
-    display: flex
-    justify-content: center
-    box-shadow: 1px 1px 10px -6px #000000
-    z-index: 999
-    transition: 1s ease-in-out
-    &.visible
-        top: 0
-    &__close
-        position: absolute
-        top: 15px
-        right: 25px
-        font-size: 20px
-        background: inherit 
-        border: unset
-        &:hover
-            cursor: pointer
+.notification 
+  background: #fafafa
+  position: fixed
+  top: -500px
+  left: 0
+  width: 100vw
+  padding: 25px 0
+  display: flex
+  justify-content: center
+  box-shadow: 1px 1px 10px -6px #000000
+  z-index: 9999
+  transition: 1s ease-in-out
+  &__wrapper.visible
+        &::after 
+            content: ""
+            position: fixed 
+            top: 0
+            left: 0
+            height: 100vh
+            width: 100%
+            background: #00000027
+            z-index: 9998
+  &.visible 
+    top: 0
+
+  &__close 
+    position: absolute
+    top: 15px
+    right: 25px
+    font-size: 20px
+    background: inherit
+    border: unset
+    &:hover 
+      cursor: pointer
